--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </nav>
     </div>
 
-    <header class="header">
+    <!-- <header class="header">
       <div class="header__logo-box">
         <img src="./img/logo-white.png" alt="Logo" class="header__logo" />
       </div>
@@ -56,7 +56,7 @@
         </h1>
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <section class="section-about">
